--- a/document/book.bib
+++ b/document/book.bib
@@ -3018,18 +3018,123 @@ Other stuff could added too}
   file = {/Users/davidjohnbaker/Zotero/storage/CAU5WPMM/Okada and Slevc - 2018 - Individual differences in musical training and exe.pdf}
 }
 
-
-@Article{okadaIndividualDifferencesMusical2018,
-  langid = {english},
-  title = {Individual Differences in Musical Training and Executive Functions: {{A}} Latent Variable Approach},
-  issn = {0090-502X, 1532-5946},
-  url = {http://link.springer.com/10.3758/s13421-018-0822-8},
-  doi = {10.3758/s13421-018-0822-8},
-  shorttitle = {Individual Differences in Musical Training and Executive Functions},
-  abstract = {Learning and performing music draw on a host of cognitive abilities, and previous research has postulated that musicians might have advantages in related cognitive processes. One such aspect of cognition that may be related to musical training is executive functions (EFs), a set of top-down processes that regulate behavior and cognition according to task demands. Previous studies investigating the link between musical training and EFs have yielded mixed results and are difficult to compare. In part, this is because most studies have looked at only one specific cognitive process, and even studies looking at the same process have used different experimental tasks. Furthermore, most correlational studies have used different Bmusician\^ and Bnon-musician\^ categorizations for their comparisons, so generalizing the findings is difficult. The present study provides a more comprehensive assessment of how individual differences in musical training relate to latent measures of three separable aspects of EFs. We administered a wellvalidated EF battery containing multiple tasks tapping the EF components of inhibition, shifting, and working memory updating (Friedman et al. in Journal of Experimental Psychology: General, 137, 201–225, 2008), as well as a comprehensive, continuous measure of musical training and sophistication (Müllensiefen et al., in PLoS ONE, 9, e89642, 2014). Musical training correlated with some individual EF tasks involving inhibition and working memory updating, but not with individual tasks involving shifting. However, musical training only predicted the latent variable of working memory updating, but not the latent variables of inhibition or shifting after controlling for IQ, socioeconomic status, and handedness. Although these data are correlational, they nonetheless suggest that musical experience places particularly strong demands specifically on working memory updating processes.},
-  journaltitle = {Memory \& Cognition},
-  urldate = {2018-10-16},
-  date = {2018-05-11},
-  author = {Brooke M. Okada and L. Robert Slevc},
-  file = {/Users/davidjohnbaker/Zotero/storage/D7HNXAJG/Okada and Slevc - 2018 - Individual differences in musical training and exe.pdf},
+@article{weissRapidCommunicationPianists2015,
+  title = {Rapid {{Communication}}: {{Pianists}} Exhibit Enhanced Memory for Vocal Melodies but Not Piano Melodies},
+  volume = {68},
+  issn = {1747-0218, 1747-0226},
+  shorttitle = {Rapid {{Communication}}},
+  doi = {10.1080/17470218.2015.1020818},
+  language = {en},
+  number = {5},
+  journal = {Quarterly Journal of Experimental Psychology},
+  author = {Weiss, Michael W. and Vanzella, Patr\'icia and Schellenberg, E. Glenn and Trehub, Sandra E.},
+  month = may,
+  year = {2015},
+  pages = {866-877},
+  file = {/Users/davidjohnbaker/Zotero/storage/5L98AP5X/Weiss et al. - 2015 - Rapid Communication Pianists exhibit enhanced mem.pdf},
+  annote = {The results of the present study revealed (a) better\\
+memory for melodies presented vocally rather\\
+than instrumentally, (b) a similar voice advantage\\
+for musicians and nonmusicians, (c) no advantage\\
+for highly trained pianists on piano melodies, (d)\\
+better memory for musicians than nonmusicians,\\
+and (e) no difference between AP musicians and\\
+non-AP musicians in memory for melodies or the\\
+voice-recognition advantage.\\
+On the basis of instrument-specific~}
 }
+
+@article{weissAbilityProcessMusical2019,
+  title = {Ability to Process Musical Pitch Is Unrelated to the Memory Advantage for Vocal Music},
+  volume = {129},
+  issn = {02782626},
+  doi = {10.1016/j.bandc.2018.11.011},
+  abstract = {Listeners remember vocal melodies better than instrumental melodies, but the origins of the effect are unclear. One explanation for the `voice advantage' is that general perceptual mechanisms enhance processing of conspecific signals. An alternative possibility is that the voice, by virtue of its expressiveness in pitch, simply provides more musical information to the listener. Individuals with congenital amusia provide a unique opportunity to disentangle the effects of conspecific status and vocal expressiveness because they cannot readily process subtleties in musical pitch. Forty-one participants whose musical pitch discrimination ability ranged from congenitally amusic to typical were tested. Participants heard vocal and instrumental melodies during an exposure phase, and heard the same melodies intermixed with timbre-matched foils in a recognition phase. Memory was better for vocal than instrumental melodies, but the magnitude of the advantage was unrelated to musical pitch discrimination or memory overall. The voice enhances melodic memory regardless of music perception ability, ruling out the role of pitch expressiveness in the voice advantage. More importantly, listeners across a wide range of musical ability can benefit from the privileged status of the voice.},
+  language = {en},
+  journal = {Brain and Cognition},
+  author = {Weiss, Michael W. and Peretz, Isabelle},
+  month = feb,
+  year = {2019},
+  pages = {35-39},
+  file = {/Users/davidjohnbaker/Zotero/storage/SP3SUMBI/Weiss and Peretz - 2019 - Ability to process musical pitch is unrelated to t.pdf}
+}
+
+@article{wigginsFrameworkEvaluationMusic23a,
+  title = {A {{Framework}} for the {{Evaluation}} of {{Music Representation Systems}}},
+  volume = {17},
+  issn = {01489267},
+  doi = {10.2307/3680941},
+  language = {en},
+  number = {3},
+  journal = {Computer Music Journal},
+  author = {Wiggins, Geraint and Miranda, Eduardo and Smaill, Alan and Harris, Mitch},
+  year = {23},
+  pages = {31},
+  file = {/Users/davidjohnbaker/Zotero/storage/6IJBL89X/Wiggins et al. - 1993 - A Framework for the Evaluation of Music Representa.pdf}
+}
+
+@incollection{vanhandelRoleWorkingMemory2011,
+  title = {Towards the Role of Working Memory in Pitch Processing in Language and Music},
+  isbn = {978-0-19-955342-6},
+  language = {en},
+  booktitle = {Language and {{Music}} as {{Cognitive Systems}}},
+  publisher = {{Oxford University Press}},
+  author = {VanHandel, Leigh and Wakefield, Jennie and Wilkins, Wendy K.},
+  editor = {Rebuschat, Patrick and Rohmeier, Martin and Hawkins, John A. and Cross, Ian},
+  month = oct,
+  year = {2011},
+  pages = {302-309},
+  file = {/Users/davidjohnbaker/Zotero/storage/DFA3SCS3/VanHandel et al. - 2011 - Towards the role of working memory in pitch proces.pdf},
+  doi = {10.1093/acprof:oso/9780199553426.003.0031}
+}
+
+@article{halpernThatNoteSounds2017,
+  title = {That Note Sounds Wrong! {{Age}}-Related Effects in Processing of Musical Expectation},
+  volume = {113},
+  issn = {02782626},
+  doi = {10.1016/j.bandc.2016.12.006},
+  abstract = {Part of musical understanding and enjoyment stems from the ability to accurately predict what note (or one of a small set of notes) is likely to follow after hearing the first part of a melody. Selective violation of expectations can add to aesthetic response but radical or frequent violations are likely to be disliked or not comprehended. In this study we investigated whether a lifetime of exposure to music among untrained older adults would enhance their reaction to unexpected endings of unfamiliar melodies. Older and younger adults listened to melodies that had expected or unexpected ending notes, according to Western music theory. Ratings of goodness-of-fit were similar in the groups, as was ERP response to the note onset (N1). However, in later time windows (P200 and Late Positive Component), the amplitude of a response to unexpected vs. expected endings was both larger in older adults, corresponding to greater sensitivity, and more widespread in locus, consistent with a dedifferentiation pattern. Lateralization patterns also differed. We conclude that older adults refine their understanding of this important aspect of music throughout life, with the ability supported by changing patterns of neural activity.},
+  language = {en},
+  journal = {Brain and Cognition},
+  author = {Halpern, Andrea R. and Zioga, Ioanna and Shankleman, Martin and Lindsen, Job and Pearce, Marcus T. and Bhattacharya, Joydeep},
+  month = apr,
+  year = {2017},
+  pages = {1-9},
+  file = {/Users/davidjohnbaker/Zotero/storage/4BHSY8FT/Halpern et al. - 2017 - That note sounds wrong! Age-related effects in pro.pdf}
+}
+
+@incollection{halpernMemoryMelodies2010,
+  address = {New York, NY},
+  title = {Memory for {{Melodies}}},
+  volume = {36},
+  isbn = {978-1-4419-6113-6 978-1-4419-6114-3},
+  language = {en},
+  booktitle = {Music {{Perception}}},
+  publisher = {{Springer New York}},
+  author = {Halpern, Andrea R. and Bartlett, James C.},
+  editor = {Riess Jones, Mari and Fay, Richard R. and Popper, Arthur N.},
+  year = {2010},
+  pages = {233-258},
+  file = {/Users/davidjohnbaker/Zotero/storage/2XW33EH9/Halpern and Bartlett - 2010 - Memory for Melodies.pdf},
+  doi = {10.1007/978-1-4419-6114-3_8}
+}
+
+@article{mullensiefenMusicalityNonMusiciansIndex2014,
+  title = {The {{Musicality}} of {{Non}}-{{Musicians}}: {{An Index}} for {{Assessing Musical Sophistication}} in the {{General Population}}},
+  volume = {9},
+  issn = {1932-6203},
+  shorttitle = {The {{Musicality}} of {{Non}}-{{Musicians}}},
+  doi = {10.1371/journal.pone.0089642},
+  abstract = {Musical skills and expertise vary greatly in Western societies. Individuals can differ in their repertoire of musical behaviours as well as in the level of skill they display for any single musical behaviour. The types of musical behaviours we refer to here are broad, ranging from performance on an instrument and listening expertise, to the ability to employ music in functional settings or to communicate about music. In this paper, we first describe the concept of `musical sophistication' which can be used to describe the multi-faceted nature of musical expertise. Next, we develop a novel measurement instrument, the Goldsmiths Musical Sophistication Index (Gold-MSI) to assess self-reported musical skills and behaviours on multiple dimensions in the general population using a large Internet sample (n = 147,636). Thirdly, we report results from several lab studies, demonstrating that the Gold-MSI possesses good psychometric properties, and that self-reported musical sophistication is associated with performance on two listening tasks. Finally, we identify occupation, occupational status, age, gender, and wealth as the main socio-demographic factors associated with musical sophistication. Results are discussed in terms of theoretical accounts of implicit and statistical music learning and with regard to social conditions of sophisticated musical engagement.},
+  language = {en},
+  number = {2},
+  journal = {PLoS ONE},
+  author = {M\"ullensiefen, Daniel and Gingras, Bruno and Musil, Jason and Stewart, Lauren},
+  editor = {Snyder, Joel},
+  month = feb,
+  year = {2014},
+  pages = {e89642},
+  file = {/Users/davidjohnbaker/Zotero/storage/HCGVMTSM/Müllensiefen et al. - 2014 - The Musicality of Non-Musicians An Index for Asse.PDF}
+}
+
+
