--- a/document/book.bib
+++ b/document/book.bib
@@ -3137,4 +3137,83 @@ On the basis of instrument-specific~}
   file = {/Users/davidjohnbaker/Zotero/storage/HCGVMTSM/Müllensiefen et al. - 2014 - The Musicality of Non-Musicians An Index for Asse.PDF}
 }
 
+@article{unsworthComplexWorkingMemory2009,
+  title = {Complex Working Memory Span Tasks and Higher-Order Cognition: {{A}} Latent-Variable Analysis of the Relationship between Processing and Storage},
+  volume = {17},
+  issn = {0965-8211, 1464-0686},
+  shorttitle = {Complex Working Memory Span Tasks and Higher-Order Cognition},
+  doi = {10.1080/09658210902998047},
+  language = {en},
+  number = {6},
+  journal = {Memory},
+  author = {Unsworth, Nash and Redick, Thomas S. and Heitz, Richard P. and Broadway, James M. and Engle, Randall W.},
+  month = aug,
+  year = {2009},
+  pages = {635-654},
+  file = {/Users/davidjohnbaker/Zotero/storage/9U4T3HUP/Unsworth et al. - 2009 - Complex working memory span tasks and higher-order.pdf}
+}
+
+@article{liEstimatingWorkingMemory2013,
+  title = {Estimating Working Memory Capacity for Lists of Nonverbal Sounds},
+  volume = {75},
+  issn = {1943-3921, 1943-393X},
+  doi = {10.3758/s13414-012-0383-z},
+  abstract = {Working memory (WM) capacity limit has been extensively studied in the domains of visual and verbal stimuli. Previous studies have suggested a fixed WM capacity of typically about three or four items, on the basis of the number of items in working memory reaching a plateau after several items as the set size increases. However, the fixed WM capacity estimate appears to rely on categorical information in the stimulus set (Olsson \& Poom Proceedings of the National Academy of Sciences 102:8776-8780, 2005). We designed a series of experiments to investigate nonverbal auditory WM capacity and its dependence on categorical information. Experiments 1 and 2 used simple tones and revealed capacity limit of up to two tones following a 6-s retention interval. Importantly, performance was significantly higher at set sizes 2, 3, and 4 when the frequency difference between target and test tones was relatively large. In Experiment 3, we added categorical information to the simple tones, and the effect of tone change magnitude decreased. Maximal capacity for each individual was just over three sounds, in the range of typical visual procedures. We propose that two types of information, categorical and detailed acoustic information, are kept in WM and that categorical information is critical for high WM performance.},
+  language = {en},
+  number = {1},
+  journal = {Attention, Perception, \& Psychophysics},
+  author = {Li, Dawei and Cowan, Nelson and Saults, J. Scott},
+  month = jan,
+  year = {2013},
+  pages = {145-160},
+  file = {/Users/davidjohnbaker/Zotero/storage/KCKIPLZ8/Li et al. - 2013 - Estimating working memory capacity for lists of no.pdf}
+}
+
+@book{thurstonePrimaryMentalAbilities1938,
+  address = {Chicago},
+  title = {Primary {{Mental Abilities}}},
+  publisher = {{University of Chicago Press}},
+  author = {Thurstone, L. L.},
+  year = {1938}
+}
+
+@book{ravenManualRavenProgressive1994,
+  title = {Manual for {{Raven}}'s Progressive Matrices and Mill Hill Vocabulary Scales.},
+  shorttitle = {Advanced Progressive Matrices},
+  author = {Raven, J},
+  year = {1994}
+}
+
+@book{fieldDiscoveringStatisticsUsing2012,
+  address = {London ; Thousand Oaks, Calif},
+  title = {Discovering Statistics Using {{R}}},
+  isbn = {978-1-4462-0046-9 978-1-4462-0045-2},
+  lccn = {HA32 .F537 2012},
+  publisher = {{Sage}},
+  author = {Field, Andy P. and Miles, Jeremy and Field, Zo\"e},
+  year = {2012},
+  keywords = {Computer programs,R (Computer program language),Social sciences,Statistical methods Computer programs,Statistics},
+  note = {OCLC: ocn760970657}
+}
+
+@article{rosseelLavaanPackageStructural2012,
+  title = {Lavaan: {{An R Package}} for {{Structural Equation Modeling}}},
+  volume = {48},
+  issn = {1548-7660},
+  shorttitle = {Lavaan},
+  doi = {10.18637/jss.v048.i02},
+  language = {en},
+  number = {2},
+  journal = {Journal of Statistical Software},
+  author = {Rosseel, Yves},
+  year = {2012},
+  file = {/Users/davidjohnbaker/Zotero/storage/KV2CZT7S/Rosseel - 2012 - blavaanb  An iRi Package for Structural.pdf}
+}
+
+@misc{teamLanguageEnvironmentStatistical2015,
+  title = {R: {{A}} Language and Environment for Statistical Computing.},
+  author = {Team, R Core},
+  year = {2015}
+}
+
 
