--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -7,12 +7,13 @@ Karpinski conceptualizes the first stage of _hearing_ as solely involving the ph
 This stage is distinguished from that of _short-term melodic memory_ which refers to the amount of melodic information that can be represented in conscious awareness.
 Given that neither stage of the first two steps of Karpinski's model requires any sort of musical expertise, every individual with normal hearing and cognition should be able to partake in the first two steps of melodic dictation.^[This whole model needs critique under the WMC literature. It's kind of strange to think that the act of something hitting your ear is different than attention (the way that Cowan thinks about WMC and again that you can split up the representation in memory from that of what the characteristics are of the melody like the meter and scale degrees, which have been argued to be part of intrinsic qualia) also there is a big problem here about stuff being actively rehearsed or not]
 The ability to hear, then remember musical information is where all students of melodic dictation are presumed to start.
-From this baseline students recieve explicit education in music theory and aural skills and to develop the ability to link what is heard to what can then be musically understood and then notated.
+From this baseline, students recieve explicit education in music theory and aural skills and to develop the ability to link what is heard to what can then be musically understood and then notated.
 
-While the majority of beginning students of melodic dictation are assumed to start at the same ability, recent reserach from music psychology suggests that individual differences in musical perception exist and must be accounted for from a psychological and pedagogical standpoint.
-In order to fully capture the diversity of listening abilities amongst students of melodic dictation a complete model of melodic dictation must be able to account for and rule out non-specific factors dealing with melodic dictation.
+While the majority of beginning students of melodic dictation are assumed to start at the same ability, recent reserach from music psychology suggests that individual differences in musical perception exist and must be accounted for from a psychological and pedagogical standpoint (Citations Here).
+In order to fully capture the diversity of listening abilities amongst students of melodic dictation, a complete account melodic dictation music include individual differences in ability.
+Understanding how differences at the individual level vary also will help pedagoges know what can be reasonably expected of students with different experiences and abilities.
 
-Attempting to investigate all four parts of melodic dictation from hearing, to short-term melodic memory, to musical understanding, to notation is both cumbersome from a theoretical perspective and  practically unfeasible due to the amount of variables at play.
+Attempting to investigate all four parts of melodic dictation from hearing, to short-term melodic memory, to musical understanding, to notation is cumbersome both from a theoretical perspective and practically unfeasible due to the amount of variables that might contribute to this process.
 In order to obtain a clearer picture of what mechanisms contribute to this process, these steps must be be investigated in turn.
 This chapter investigates the first two steps of the Karpinski model with an experiment investigating individual factors that contribute to an individual's musical memory that do not depend on their knowledge of Western musical notation.
 By understanding which, if any, individual factors play a role in this process, it will inform what can be reasonably expected of individuals when other musical variables are introduced.
@@ -207,34 +208,37 @@ Not an either or, more like a both.
 ### Participants
 
 Two hundred fifty-four students enrolled at Louisiana State University completed the study. 
-We recruited students, mainly in the Department of Psychology and the School of Music.
-The criteria for inclusion in the analysis were no self-reported hearing loss, not actively taking medication that would alter cognitive performance, and univariate outliers (defined as individuals whose performance on any task was greater than 3 standard deviations from the mean score of that task). 
+Students were mainly recruited in the Department of Psychology and the School of Music.
+The criteria for inclusion in the analysis were no self-reported hearing loss, not actively taking medication that would alter cognitive performance, and the removeal of any univariate outliers (defined as individuals whose performance on any task was greater than 3 standard deviations from the mean score of that task). 
 Using these criteria, eight participants were not eligible due to self reporting hearing loss, one participant was removed for age, and six participants were eliminated as univariate outliers due to performance on one or more of the tasks of working memory capacity.
-Thus, 239 participants met the criteria for inclusion. The eligible participants were between the ages of 17 and 43 (M = 19.72, SD = 2.74; 148 females). 
+Thus, 239 participants met the criteria for inclusion. 
+The eligible participants were between the ages of 17 and 43 (M = 19.72, SD = 2.74; 148 females). 
 Participants volunteered, received course credit, or were paid $20.
 
 ### Materials
 
-Cognitive Measures
+#### Cognitive Measures
 
 All variables used for modeling approximated normal distributions. 
-Processing errors for each task were positively skewed for the complex span tasks similar to Unsworth, Redick, Heitz, Broadway, and Engle (2009). 
+Processing errors for each task were positively skewed for the complex span tasks similar to @unsworthComplexWorkingMemory2009.
 Positive and significant correlations were found between recall scores on the three tasks measuring working memory capacity (WMC) and the two measuring general fluid intelligence (Gf). 
-The WMC recall scores negatively correlated with the reported number of errors in each task, suggesting that rehearsal processes were effectively limited by the processing tasks (Unsworth et al., 2009).
+The WMC recall scores negatively correlated with the reported number of errors in each task, suggesting that rehearsal processes were effectively limited by the processing tasks [@unsworthComplexWorkingMemory2009].
 
 #### Measures
 
 ##### Goldsmiths Musical Sophistication Index Self Report (Gold-MSI)
 
 Participants completed a 38-item self-report inventory and questions consisted of free response answers or choosing a
-selection on a likert scale that ranged from 1-7. (Müllensiefen, et al., 2014). 
+selection on a likert scale that ranged from 1-7. [@mullensiefenMusicalityNonMusiciansIndex2014]. 
 The complete survey with all questions used can be found at goo.gl/dqtSaB.
 
 ##### Tone Span (TSPAN)
 
-Participants completed a two-step math operation and then tried to remember three different tones in an alternating sequence (based upon Unsworth et al., 2005). 
-We modelled the three tones after Li, Cowan, Saults (2005) paper using frequencies outside of the equal tempered system (200Hz, 375Hz, 702Hz). 
-The same math operation procedure as OSPAN was used. The tones was presented aurally for 1000ms after each math operation. During tone recall, participants were presented three different options H M and L (High, Medium, and Low), each with its own check box.
+Participants completed a two-step math operation and then tried to remember three different tones in an alternating sequence (based upon @unsworthAutomatedVersionOperation2005). 
+We modelled the three tones after @liEstimatingWorkingMemory2013 paper's using frequencies outside of the equal tempered system (200Hz, 375Hz, 702Hz). 
+The same math operation procedure as OSPAN was used. 
+The tones was presented aurally for 1000ms after each math operation. 
+During tone recall, participants were presented three different options H M and L (High, Medium, and Low), each with its own check box.
 Tones were recalled in serial order by clicking on each tone’s box in the appropriate order.
 Tone recall was untimed.
 Participants were provided practice trials and similar to OSPAN, the test procedure included three trials of each list length (3-7 tones), totalling 75 letters and 75 math operations.
@@ -242,7 +246,7 @@ Participants were provided practice trials and similar to OSPAN, the test proced
 ##### Operation Span (OSPAN)
 
 Participants completed a two-step math operation and then tried to remember a letter (F, H, J, K, L, N, P, Q, R, S, T, or
-Y) in an alternating sequence (Unsworth et al., 2005). 
+Y) in an alternating sequence [@unsworthAutomatedVersionOperation2005]. 
 The same math operation procedure as TSPAN was used. 
 The letter was presented visually for 1000ms after each math
 operation. 
@@ -253,8 +257,8 @@ Participants were provided practice trials and similar to TSPAN, the test proced
 
 ##### Symmetry Span (SSPAN)
 
-Participants completed a two-step symmetry judgment and were prompted to recall a visually-presented red square on a 4 X 4 matrix (Unsworth et al., 2005). 
-In the symmetry judgment, participants were shown an 8 x 8 matrix with random squares filled in black. 
+Participants completed a two-step symmetry judgment and were prompted to recall a visually-presented red square on a 4 X 4 matrix [@unsworthAutomatedVersionOperation2005]. 
+In the symmetry judgment, participants were shown an 8 x 8 matrix with random squares filled in blank. 
 Participants had to decide if the black squares were symmetrical about the matrix’s vertical axis and then click the screen. 
 Next, they were shown a “yes” and “no” box and clicked on the appropriate box. 
 Participants then saw a 4 X 4 matrix for 650 ms with one red square after each symmetry judgment. 
@@ -264,19 +268,17 @@ The test procedure included three trials of each list length (2-5 red squares), 
 
 ##### Gold-MSI Beat Perception
 
-Participants were presented 18 excerpts of instrumental music from rock, jazz, and classical genres (Müllensiefen et
-al., 2014). 
+Participants were presented 18 excerpts of instrumental music from rock, jazz, and classical genres [@mullensiefenMusicalityNonMusiciansIndex2014]. 
 Each excerpt was presented for 10 to 16s through headphones and had a tempo ranging from 86 to 165 beats per
 minute. 
 A metronomic beep was played over each excerpt either on or off the beat. 
 Half of the excerpts had a beep on the beat, and the other half had a beep off the beat. 
-After each excerpt was played, participants answered if the metronomic beep was on or off the beat and provided their confidence: “I
-am sure”, “I am somewhat sure”, or “I am guessing”. 
+After each excerpt was played, participants answered if the metronomic beep was on or off the beat and provided their confidence: “I am sure”, “I am somewhat sure”, or “I am guessing”. 
 The final score was the proportion of correct responses on the beat judgment.
 
 ##### Gold-MSI Melodic Memory Test
 
-Participants were presented melodies between 10 to 17 notes long through headphones (Müllensiefen et al., 2014).
+Participants were presented melodies between 10 to 17 notes long through headphones [@mullensiefenMusicalityNonMusiciansIndex2014].
 There were 12 trials, half with the same melody and half with different melodies. 
 During each trial, two versions of a melody were presented. 
 The second version was transposed to a different key. 
@@ -288,12 +290,11 @@ After each trial, participants answered if the two melodies had identical pitch 
 Participants were presented with a series of numbers with
 an underlying pattern. 
 After being given two example problems to solve, participants had 4.5 minutes in order to solve 15 different problems. 
-Each trial had 5 different options as possible answers (Thurstone, 1938).
+Each trial had 5 different options as possible answers [@thurstonePrimaryMentalAbilities1938].
 
 ##### Raven’s Advanced Progressive Matrices
 
-Participants were presented a 3 x 3 matrix of geometric patterns with one pattern missing (Raven et al., 1998). 
-Up to eight pattern choices were given at the bottom of the screen. 
+Participants were presented a 3 x 3 matrix of geometric patterns with one pattern missing [@ravenManualRavenProgressive1994]. Up to eight pattern choices were given at the bottom of the screen. 
 Participants had to click the choice that correctly fit the pattern above. 
 There were three blocks of 12 problems, totalling 36 problems. 
 The items increased in difficulty across each block. 
@@ -317,17 +318,17 @@ Only measures used in modeling are reported below.
 
 The goal of the analyses was to examine the relationships among the measures and constructs of WMC, general fluid intelligence, musical sophistication (operationalized as the General score from the Gold-MSI), in relation to the two objective listening tests on the Gold-MSI. 
 Before running any sort of modeling, we inspected our data to ensure in addition to outlier issues as mentioned above, the data exhibited normal distributions. 
-We report both our correlation values, as well as visually displaying our distributions in Figure 1.
+I report both correlation values, as well as visually displaying our distributions in Figure 1.
 
-Before running any modeling, we checked our data for assumptions of normality since violations of normality can strongly affect the covariances between items. 
+Before running any modeling, I checked our data for assumptions of normality since violations of normality can strongly affect the covariances between items. 
 While some items in Figure 1 displayed a negative skew, many of the individual level items from the self report scale exhibited high
-levels of Skew and Kurtosis beyond the generally accepted ± 2 (Field, Miles, & Field, 2012), but none of the items with the unsatisfactory measures are used in the general factor.
+levels of Skew and Kurtosis beyond the generally accepted ± 2 [@fieldDiscoveringStatisticsUsing2012], but none of the items with the unsatisfactory measures are used in the general factor.
 
 #### Modeling
 
 ##### Measurement Model
 
-We then fit a measurement model to examine the underlying structure of the variables of interest used to assess the latent constructs (general musical sophistication, WMC, general fluid intelligence) by performing a confirmatory factor analysis (CFA) using the lavaan package (Rosseel, 2013) using R (R Core Team, 2017). 
+We then fit a measurement model to examine the underlying structure of the variables of interest used to assess the latent constructs (general musical sophistication, WMC, general fluid intelligence) by performing a confirmatory factor analysis (CFA) using the lavaan package [@rosseelLavaanPackageStructural2012] using R [@teamLanguageEnvironmentStatistical2015]. 
 Model fits in can be found in Table 3. 
 For each model, latent factors were constrained to have a mean of 0 and variance of 1 in order to allow the latent covariances to be interpreted as correlations. 
 Since the objective measures were on different scales, all variables were converted to z scores before running any modeling.
@@ -353,15 +354,49 @@ After removing the poorly fitting items, we then proceeded to examine if removin
 Fit measures for Model 3 can be seen in Table 3 and removing the self-report items resulted in a significantly better model fit (χ2 (171)=438.8, p < . 001). 
 Following the rule of thumb that at least 3 variables should be used to define any latent-variable (Beajuean, 2014) we modelled WMC as latent variable and Gf as a composite average of the two tasks administered in order to improve model fit. 
 This model resulted in significant improvement to the model (χ2 (4)=14.37, p < . 001). 
-Finally we examined the change in test statistics between Model 2 and a model that removed the cognitive measures-- a model akin to one of the original models reported in Müllensiefen et al., (2014)-- for Model 5. 
+Finally we examined the change in test statistics between Model 2 and a model that removed the cognitive measures-- a model akin to one of the original models reported in [@mullensiefenMusicalityNonMusiciansIndex2014]-- for Model 5. 
 Testing between the two models resulted in a significant improvement in model fit (χ2 (78)=104.75, p < . 001). 
 Figure 3 displays Model 4, our nested model with the best fit indices.
 
-* TABLE HERE
+```{r, echo=FALSE}
+semModelNames <- c("CFA","Model 1","Model 2","Model 3", "Model 4","Model 5")
+df <- c(186,222,181,10,6,130)
+chi <- c(533.60,586.30,462.90,24.11,9.74,358.16)
 
-* ALL FIGURES OF MODELS 
+semDT <- data.frame(semModelNames,df, chi)
+
+knitr::kable(semDT)
+```
+
+
+```{r measurementmodel, echo=FALSE, fig.cap="CFA Measurement Model",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/measurementModel.png")
+```
+
+```{r model1, echo=FALSE, fig.cap="Full Model, All Variables Included",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/sem1.png")
+```
+
+```{r model2, echo=FALSE, fig.cap="Full Model, Highly Correlated Residual Items",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/sem2.png")
+```
+
+```{r model3, echo=FALSE, fig.cap="Self Report Removed, Only Cognitive Measures",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/sem3.png")
+```
+
+```{r model4, echo=FALSE, fig.cap="Cognitive Measures, Gf as Observed",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/sem4.png")
+```
+
+```{r model5, echo=FALSE, fig.cap="General Self Report Only",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/sem5.png")
+```
+
 
 ### Discussion
+
+* Add relevance to melodic dictation 
 
 ##### Measurement Model 
 
@@ -372,28 +407,25 @@ This model was run to create a baseline measurement.
 ##### Structural Equation Model Fitting
 
 Following a series of nested model fits, we were able to improve model fits on a series of SEMs that incorporated both measures of WMC and measures of general fluid intelligence.
-Before commenting on new models, it is worth noting that the Model 5 does not seem to align with the findings from the original 2014 paper by Müllensiefen et al. 
+Before commenting on new models, it is worth noting that the Model 5 does not seem to align with the findings from the original 2014 paper by [@mullensiefenMusicalityNonMusiciansIndex2014]l. 
 While the correlation between the objective tasks is the same (r = .16), the factor loadings from this paper suggest lower values for both Beat Perception (.37 original, .27 this paper) as well as Melodic Memory (.28 original, .18 this paper). 
 Note that two items were removed dealing with melody for memory for this model; when those items were re-run with the data, the factor
 loadings did not deviate from these numbers.
 
 The first two models we ran resulted in minor improvements to model fit. 
-While difference in models was significant (χ2 (41)=123.39, p < . 001 ), probably due to the
-number of parameters that were now not constrained, the
-relative fit indices of the models did not change drastically. 
+While difference in models was significant ($\chi^2$ (41)=123.39, p < . 001 ), probably due to the number of parameters that were now not constrained, the relative fit indices of the models did not change drastically. 
 It was not until the self-report measures were removed from the model, and then manipulated according to latent variable modeling recommendations, was there a marked increase in the relative fit indices. 
 Fitting the model with only the cognitive measures, we were able to enter the bounds of acceptable relative fit indices that were noted above. 
 In order to find evidence that the cognitive models (Models 3 and 4) were indeed a better fit than using the General factor, we additionally ran a comparison between our adjusted measurement model and a model with only the self report.
 While both of our nested models were significantly different, the cognitive models exhibited superior relative fit indices.
 Lastly, turning to Figure 3, we note that our latent variable of WMC exhibited much larger factor loadings predicting the two objective, perceptual tests than our measure of general fluid intelligence. 
-We also note that the factor loading predicting the Beat Perception task (.36) was higher than that of the Melodic Memory task (.21). These rankings mirror that of the original Müllensiefen et al., (2014) paper and merit further examination in order to disentangle what processes are contributing to both tasks.
+We also note that the factor loading predicting the Beat Perception task (.36) was higher than that of the Melodic Memory task (.21). 
+These rankings mirror that of the original [@mullensiefenMusicalityNonMusiciansIndex2014] paper and merit further examination in order to disentangle what processes are contributing to both tasks.
 
-These results align with predictions made with Process Overlap Theory (Kovacs & Conway,
-2016), which predict that higher executive loads are needed
-for tasks of perception. 
+These results align with predictions made with Process Overlap Theory [@kovacsProcessOverlapTheory2016], which predict that higher executive loads are needed for tasks of perception. 
 While we failed to predict which task would load higher --we assumed that the ability to maintain and manipulate information in the Melodic Memory task would be better predicted by WMC than the Beat Perception task-- this might be due to the fact that performing well in a melodic memory task demands a certain amount of musical training that is not captured by either cognitive measure.
 In the future, we are interested in exploring more theoretically-driven models that use specific, task oriented predictors in order to explain the relationships between the perceptual tasks and the cognitive measures. 
 Given the results here that suggest that measures of cognitive ability play a significant role in tasks of musical perception, we suggest that future research should consider taking measures of cognitive ability into account, so that other variables of interest are able to be shown to contribute above and beyond baseline cognitive measures.
 
-In this paper we fit a series of structural equation models in order to investigate the degree to which baseline cognitive ability was able to predict performance on a musical perception task. 
+In this chapter we fit a series of structural equation models in order to investigate the degree to which baseline cognitive ability was able to predict performance on a musical perception task. 
 Our findings suggest that measures of WMC are able to account for a large amount of variance beyond that of self report in tasks of musical perception.
